# projects-searching

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 39c511bc9278_.py  78fe4a8f4e05_.py
src/api/: dependencies.py  projects.py
src/core/: config.py  db.py  limiter.py  logger.py  redis.py
src/models/: projects.py
src/schemas/: projects.py
src/services/: projects.py
tests/: conftest.py  test_api.py  test_projects_service.py
