[tool.poetry]
name = "projects-search"
version = "0.1.0"
description = ""
authors = ["nikrenxd <nikrenc1101@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic-settings = "^2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.13.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
httpx = "^0.27.2"
asgi-lifespan = "==2.*"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
