[project]
name = "projects-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.5",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.3",
    "redis>=5.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.36",
]
